# Diffusion-EBM

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: image_classifier.py  main.py
app/api/: router.py
app/services/: diffusion_service.py  ebm_service.py  gan_service.py
helper_lib/: __init__.py  data_loader.py  evaluator.py  generator.py  model.py  trainer.py  utils.py
scripts/: test_diffusion.py  test_ebm.py  train_gan_mnist.py
weights/: gan_mnist_gen.pt
