[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "genai-helper-api"
version = "0.1.0"
description = "FastAPI + PyTorch helper library with CNN, GAN, Diffusion, and EBM generators."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "numpy==1.26.4",
  "pillow",
  "tqdm",
  "matplotlib",
  "torch==2.2.2",
  "torchvision==0.17.2",
  "torchaudio==2.2.2",
]

[project.urls]
Homepage = "https://github.com/your-username/your-repo-name"

[tool.uvicorn]
app = "app.main:app"
host = "0.0.0.0"
port = 8000
reload = true
